--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 <h1>This is heading</h1>
 <p>first is paragraph.</p>
+<p>This is paragraph.</p>
 <p>This is another paragraph</p>
 </body>
 </html>
